[package]
name = "var-agg"
version = "0.1.1"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]
license = "GPL-3.0+"
readme = "README.md"

[dependencies]
bio = "*"
clap = {version = "*", features = ["yaml", "color", "suggestions"]}
csv = "1"
error-chain = "*"
ordered-float = "0.5.0"
rust-htslib = "*"
shlex = "*"
slog = {version = "*", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "*"
slog-term = "*"
